--- a/cake.html
+++ b/cake.html
@@ -123,7 +123,96 @@
       <!-- === Intro Features =========== -->
       <div id="intro-features" class="flat-section">
 
-        <div class="section-content container">
+        <div class="section-content">
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-3/" target="_blank">
+                          <img src="images/services/cake%20demo%203.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-4/" target="_blank">
+                          <img src="images/services/cake%20demo%204.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-5/" target="_blank">
+                          <img src="images/services/cake%20demo%205.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-6/" target="_blank">
+                          <img src="images/services/cake%20demo%206.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-7/" target="_blank">
+                          <img src="images/services/cake%20demo%207.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-3 col-xl-3">
+                <div class="service-item mb-40">
+                  <div class="service-thumb">
+                    <div class="card">
+                      <div class="card-body">
+                        <a href="https://cake-shop-demo.github.io/Cake-Demo-8/" target="_blank">
+                          <img src="images/services/cake%20demo%208.jpg" class="img-fluid" alt="">
+                        </a>
+                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div><!-- .row end -->
+          </div>
 
 
 
