--- a/travel agency.html
+++ b/travel agency.html
@@ -123,103 +123,15 @@
             <!-- === Intro Features =========== -->
             <div id="intro-features" class="flat-section">
 
-                <div class="section-content container">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Transport-Agency.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Travel-Agency.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Entertainment.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Beautician.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Fitness.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Abashik-hotel.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <a href="hospital.html">
-                                    <img src="images/services/hospitals.jpg" class="img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Education.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/E-commerce.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Interior%20design.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/nft%20fronted.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <a href="car.html">
-                                <img src="images/services/car%20deler.jpg" class="card-img-top" alt="...">
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col-md-3">
-                            <div class="card">
-                                <a href="cake.html">
-                                <img src="images/services/cake%20shop.jpg" class="card-img-top" alt="...">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/arcitecture.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/admin%20dashborad.jpg" class="card-img-top" alt="...">
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img src="images/services/Coming-soon.png" class="card-img-top" alt="...">
-                            </div>
-                        </div>
+                <div class="section-content">
 
 
-                    </div>
+
+
+
+
+
+
                     <!-- .section-content end -->
                 </div>
                 <!-- .flat-section end -->
