--- a/Category.html
+++ b/Category.html
@@ -127,34 +127,45 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="transport%20agency.html">
                                 <img src="images/services/Transport-Agency.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="travel%20agency.html">
                                 <img src="images/services/Travel-Agency.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="entertainment.html">
                                 <img src="images/services/Entertainment.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="beautician.html">
                                 <img src="images/services/Beautician.jpg" class="card-img-top" alt="...">
-                            </div>
+                                </a>
                         </div>
                     </div>
                     <div class="row mt-5">
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="fitness.html">
                                 <img src="images/services/Fitness.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="residential%20hotel.html">
                                 <img src="images/services/Abashik-hotel.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -173,7 +184,9 @@
                     <div class="row mt-5">
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="ecommerce.html">
                                 <img src="images/services/E-commerce.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -204,7 +217,9 @@
                         </div>
                         <div class="col-md-3">
                             <div class="card">
+                                <a href="architecture.html">
                                 <img src="images/services/arcitecture.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -214,14 +229,28 @@
                         </div>
                         <div class="col-md-3">
                             <div class="card">
-                                <img src="images/services/Coming-soon.png" class="card-img-top" alt="...">
+                                <a href="bike.html">
+                                <img src="images/services/bike.jpg" class="card-img-top" alt="...">
+                                </a>
                             </div>
                         </div>
-
-
                     </div>
-                    <!-- .section-content end -->
+                    <div class="row mt-5">
+                        <div class="col-md-3">
+                            <div class="card">
+                                <a href="organization.html">
+                                <img src="images/services/organization.jpg" class="card-img-top" alt="...">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                    <img src="images/services/Coming-soon.png" class="card-img-top" alt="...">
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
                 <!-- .flat-section end -->
 
             </div><!-- #content-wrap -->
