--- a/bike.html
+++ b/bike.html
@@ -124,87 +124,88 @@
             <div id="intro-features" class="flat-section">
 
                 <div class="section-content">
-
                     <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-6 col-lg-3 col-xl-3">
-                            <div class="service-item mb-40">
-                                <div class="service-thumb">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="https://organization-web.github.io/Clinic-1/" target="_blank">
-                                                <img src="images/services/clinic-1.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://car-dealer-websites.github.io/Bike-1/" target="_blank">
+                                                    <img src="images/services/bike%201.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 col-xl-3">
-                            <div class="service-item mb-40">
-                                <div class="service-thumb">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="https://organization-web.github.io/Clinic-2/" target="_blank">
-                                                <img src="images/services/clinic-2.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://car-dealer-websites.github.io/Bike-2/" target="_blank">
+                                                    <img src="images/services/bike%202.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 col-xl-3">
-                            <div class="service-item mb-40">
-                                <div class="service-thumb">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="https://organization-web.github.io/Clinic-3/" target="_blank">
-                                                <img src="images/services/clinic-3.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://car-dealer-websites.github.io/Bike-3/" target="_blank">
+                                                    <img src="images/services/bike%203.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 col-xl-3">
-                            <div class="service-item mb-40">
-                                <div class="service-thumb">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="https://organization-web.github.io/Dental-1/" target="_blank">
-                                                <img src="images/services/dental-1.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <h5 class="card-title mt-5 text-center">Dental</h5>
+                            <!--<div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Dental-1/" target="_blank">
+                                                    <img src="images/services/dental-1.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Dental</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 col-lg-3 col-xl-3">
-                            <div class="service-item mb-40">
-                                <div class="service-thumb">
-                                    <div class="card">
-                                        <div class="card-body">
-                                            <a href="https://organization-web.github.io/Dental-2/" target="_blank">
-                                                <img src="images/services/dental-2.jpg" class="img-fluid" alt="">
-                                            </a>
-                                            <h5 class="card-title mt-5 text-center">Dental</h5>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Dental-2/" target="_blank">
+                                                    <img src="images/services/dental-2.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Dental</h5>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div><!-- .row end -->
-                </div><!-- .container end -->
+                            </div>-->
+                        </div><!-- .row end -->
+                    </div>
 
-                </div><!-- .section-content end -->
 
-            </div><!-- .flat-section end -->
 
-        </div><!-- #content-wrap -->
+                    <!-- .section-content end -->
+                </div>
+                <!-- .flat-section end -->
+
+            </div><!-- #content-wrap -->
 
     </section><!-- #content end -->
 
