--- a/travel agency.html
+++ b/travel agency.html
@@ -125,7 +125,80 @@
 
                 <div class="section-content">
 
-
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Travel-Agency-1/" target="_blank">
+                                                    <img src="images/services/travel-1.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Travel-Agency-2/" target="_blank">
+                                                    <img src="images/services/travel-2.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Travel-Agency-3/" target="_blank">
+                                                    <img src="images/services/travel-3.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Organization-1/" target="_blank">
+                                                    <img src="images/services/org-1.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--<div class="col-md-6 col-lg-3 col-xl-3">
+                                <div class="service-item mb-40">
+                                    <div class="service-thumb">
+                                        <div class="card">
+                                            <div class="card-body">
+                                                <a href="https://organization-web.github.io/Dental-2/" target="_blank">
+                                                    <img src="images/services/dental-2.jpg" class="img-fluid" alt="">
+                                                </a>
+                                                <h5 class="card-title mt-5 text-center">Dental</h5>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>-->
+                        </div><!-- .row end -->
+                    </div>
 
 
 
