--- a/beautician.html
+++ b/beautician.html
@@ -135,7 +135,7 @@
                         <a href="https://organization-web.github.io/Beautician-1/" target="_blank">
                           <img src="images/services/beauty-1.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Beautician</h5>
+                        <h5 class="card-title mt-5 text-center">Beautician-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <a href="https://organization-web.github.io/Baeutician-2/" target="_blank">
                           <img src="images/services/beauty-2.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Beautician</h5>
+                        <h5 class="card-title mt-5 text-center">Beautician-2</h5>
                       </div>
                     </div>
                   </div>
