--- a/bike.html
+++ b/bike.html
@@ -134,7 +134,7 @@
                                                 <a href="https://car-dealer-websites.github.io/Bike-1/" target="_blank">
                                                     <img src="images/services/bike%201.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                                <h5 class="card-title mt-5 text-center">Bike-1</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -148,7 +148,7 @@
                                                 <a href="https://car-dealer-websites.github.io/Bike-2/" target="_blank">
                                                     <img src="images/services/bike%202.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                                <h5 class="card-title mt-5 text-center">Bike-2</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -162,7 +162,7 @@
                                                 <a href="https://car-dealer-websites.github.io/Bike-3/" target="_blank">
                                                     <img src="images/services/bike%203.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Bike</h5>
+                                                <h5 class="card-title mt-5 text-center">Bike-3</h5>
                                             </div>
                                         </div>
                                     </div>
