--- a/cake.html
+++ b/cake.html
@@ -135,7 +135,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-3/" target="_blank">
                           <img src="images/services/cake%20demo%203.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-4/" target="_blank">
                           <img src="images/services/cake%20demo%204.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-2</h5>
                       </div>
                     </div>
                   </div>
@@ -163,7 +163,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-5/" target="_blank">
                           <img src="images/services/cake%20demo%205.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-3</h5>
                       </div>
                     </div>
                   </div>
@@ -177,7 +177,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-6/" target="_blank">
                           <img src="images/services/cake%20demo%206.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-4</h5>
                       </div>
                     </div>
                   </div>
@@ -191,7 +191,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-7/" target="_blank">
                           <img src="images/services/cake%20demo%207.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-5</h5>
                       </div>
                     </div>
                   </div>
@@ -205,7 +205,7 @@
                         <a href="https://cake-shop-demo.github.io/Cake-Demo-8/" target="_blank">
                           <img src="images/services/cake%20demo%208.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Cake Shop</h5>
+                        <h5 class="card-title mt-5 text-center">Cake Shop-6</h5>
                       </div>
                     </div>
                   </div>
