--- a/fitness.html
+++ b/fitness.html
@@ -135,7 +135,7 @@
                         <a href="https://organization-web.github.io/Fitness-1/" target="_blank">
                           <img src="images/services/fitness-1.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Fitness</h5>
+                        <h5 class="card-title mt-5 text-center">Fitness-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <a href="https://organization-web.github.io/Fitness-2/" target="_blank">
                           <img src="images/services/fitness-2.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Fitness</h5>
+                        <h5 class="card-title mt-5 text-center">Fitness-2</h5>
                       </div>
                     </div>
                   </div>
