--- a/organization.html
+++ b/organization.html
@@ -135,7 +135,7 @@
                         <a href="https://do-test-live.github.io/Future-1/" target="_blank">
                           <img src="images/services/Particle--org-1.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Organization</h5>
+                        <h5 class="card-title mt-5 text-center">Organization-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <a href="https://do-test-live.github.io/Future-2/" target="_blank">
                           <img src="images/services/audist-org-2.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Organization</h5>
+                        <h5 class="card-title mt-5 text-center">Organization-2</h5>
                       </div>
                     </div>
                   </div>
@@ -163,7 +163,7 @@
                         <a href="https://do-test-live.github.io/Future-3/" target="_blank">
                           <img src="images/services/minimal-org3.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Organization</h5>
+                        <h5 class="card-title mt-5 text-center">Organization-3</h5>
                       </div>
                     </div>
                   </div>
@@ -177,7 +177,7 @@
                         <a href="https://organization-web.github.io/Organization-2/" target="_blank">
                           <img src="images/services/org-2.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Organization</h5>
+                        <h5 class="card-title mt-5 text-center">Organization-4 </h5>
                       </div>
                     </div>
                   </div>
