--- a/residential hotel.html
+++ b/residential hotel.html
@@ -134,7 +134,7 @@
                         <a href="https://abashik-hotel.github.io/Abashik-Hotel-1/" target="_blank">
                           <img src="images/services/abashik-hotel-1.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Residential hotel</h5>
+                        <h5 class="card-title mt-5 text-center">Residential hotel-1</h5>
                       </div>
                     </div>
                   </div>
@@ -148,7 +148,7 @@
                         <a href="https://abashik-hotel.github.io/Abashik-Hotel-3/" target="_blank">
                           <img src="images/services/abashik-hotel-3.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Residential hotel</h5>
+                        <h5 class="card-title mt-5 text-center">Residential hotel-2</h5>
                       </div>
                     </div>
                   </div>
