--- a/transport agency.html
+++ b/transport agency.html
@@ -135,7 +135,7 @@
                         <a href="https://organization-web.github.io/Transport-Company-1/" target="_blank">
                           <img src="images/services/transport-1.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Transport Agency</h5>
+                        <h5 class="card-title mt-5 text-center">Transport Agency-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                         <a href="https://organization-web.github.io/Transport-Company-2/" target="_blank">
                           <img src="images/services/transport-2.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Transport Agency</h5>
+                        <h5 class="card-title mt-5 text-center">Transport Agency-2</h5>
                       </div>
                     </div>
                   </div>
