--- a/Category.html
+++ b/Category.html
@@ -171,7 +171,7 @@
                         <div class="col-md-3">
                             <div class="card">
                                 <a href="hospital.html">
-                                    <img src="images/services/hospitals.jpg" class="img-fluid" alt="">
+                                    <img src="images/services/hospitals.jpg" class="card-img-top" alt="">
                                 </a>
                             </div>
                         </div>
