--- a/architecture.html
+++ b/architecture.html
@@ -135,7 +135,7 @@
                         <a href="https://do-test-live.github.io/W-Architect-2/" target="_blank">
                           <img src="images/services/Architect.jpg" class="img-fluid" alt="">
                         </a>
-                        <h5 class="card-title mt-5 text-center">Architecture</h5>
+                        <h5 class="card-title mt-5 text-center">Architecture-1</h5>
                       </div>
                     </div>
                   </div>
@@ -149,7 +149,7 @@
                           <a href="https://organization-web.github.io/Travel-Agency-2/" target="_blank">
                             <img src="images/services/arr%20.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Architecture</h5>
+                          <h5 class="card-title mt-5 text-center">Architecture-2</h5>
                         </div>
                       </div>
                     </div>
