--- a/car.html
+++ b/car.html
@@ -137,7 +137,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-1/" target="_blank">
                             <img src="images/services/car%20basic%201.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-1</h5>
                         </div>
                       </div>
                     </div>
@@ -151,7 +151,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-2/" target="_blank">
                             <img src="images/services/car%20basic%202.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-2</h5>
                         </div>
                       </div>
                     </div>
@@ -165,7 +165,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-3/" target="_blank">
                             <img src="images/services/car%20basic%203.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-3</h5>
                         </div>
                       </div>
                     </div>
@@ -179,7 +179,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-4/" target="_blank">
                             <img src="images/services/car%20basic%204.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-4</h5>
                         </div>
                       </div>
                     </div>
@@ -193,7 +193,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-5/" target="_blank">
                             <img src="images/services/car%20basic%205.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-5</h5>
                         </div>
                       </div>
                     </div>
@@ -207,7 +207,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-6/" target="_blank">
                             <img src="images/services/car%20basic%206.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-6</h5>
                         </div>
                       </div>
                     </div>
@@ -221,7 +221,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-7/" target="_blank">
                             <img src="images/services/car%20basic%207.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-7</h5>
                         </div>
                       </div>
                     </div>
@@ -235,7 +235,7 @@
                           <a href="https://car-dealer-websites.github.io/Basic-8/" target="_blank">
                             <img src="images/services/car%20basic%208.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Basic</h5>
+                          <h5 class="card-title mt-5 text-center">Car Basic-8</h5>
                         </div>
                       </div>
                     </div>
@@ -249,7 +249,7 @@
                           <a href="https://car-dealer-websites.github.io/Premium-1/" target="_blank">
                             <img src="images/services/car%20premium%201.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Premium</h5>
+                          <h5 class="card-title mt-5 text-center">Car Premium-1</h5>
                         </div>
                       </div>
                     </div>
@@ -263,7 +263,7 @@
                           <a href="https://car-dealer-websites.github.io/Premium-3/" target="_blank">
                             <img src="images/services/car%20premium%203.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Premium</h5>
+                          <h5 class="card-title mt-5 text-center">Car Premium-2</h5>
                         </div>
                       </div>
                     </div>
@@ -277,7 +277,7 @@
                           <a href="https://car-dealer-websites.github.io/Premium-4/" target="_blank">
                             <img src="images/services/car%20premium%204.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Premium</h5>
+                          <h5 class="card-title mt-5 text-center">Car Premium-3</h5>
                         </div>
                       </div>
                     </div>
@@ -291,7 +291,7 @@
                           <a href="https://car-dealer-websites.github.io/Premium-5/" target="_blank">
                             <img src="images/services/car%20premium%205.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Premium</h5>
+                          <h5 class="card-title mt-5 text-center">Car Premium-4</h5>
                         </div>
                       </div>
                     </div>
@@ -305,7 +305,7 @@
                           <a href="https://car-dealer-websites.github.io/Premium-6/" target="_blank">
                             <img src="images/services/car%20premium%206.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Premium</h5>
+                          <h5 class="card-title mt-5 text-center">Car Premium-5</h5>
                         </div>
                       </div>
                     </div>
@@ -319,7 +319,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-1/" target="_blank">
                             <img src="images/services/car%20pro%201.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-1</h5>
                         </div>
                       </div>
                     </div>
@@ -333,7 +333,7 @@
                           <a href="https://car-dealer-websites.github.io/pro-2" target="_blank">
                             <img src="images/services/car%20pro%202.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-2</h5>
                         </div>
                       </div>
                     </div>
@@ -347,7 +347,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-3/" target="_blank">
                             <img src="images/services/car%20pro%203.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-3</h5>
                         </div>
                       </div>
                     </div>
@@ -361,7 +361,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-4/" target="_blank">
                             <img src="images/services/car%20pro%204.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-4</h5>
                         </div>
                       </div>
                     </div>
@@ -375,7 +375,7 @@
                           <a href="https://car-dealer-websites.github.io/pro-5/" target="_blank">
                             <img src="images/services/car%20pro%205.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-5</h5>
                         </div>
                       </div>
                     </div>
@@ -389,7 +389,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-6/" target="_blank">
                             <img src="images/services/car%20pro%20%206.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-6</h5>
                         </div>
                       </div>
                     </div>
@@ -403,7 +403,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-7/" target="_blank">
                             <img src="images/services/car%20pro%207.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-7</h5>
                         </div>
                       </div>
                     </div>
@@ -417,7 +417,7 @@
                           <a href="https://car-dealer-websites.github.io/Pro-8" target="_blank">
                             <img src="images/services/car%20pro%208.jpg" class="img-fluid" alt="">
                           </a>
-                          <h5 class="card-title mt-5 text-center">Car Pro</h5>
+                          <h5 class="card-title mt-5 text-center">Car Pro-8</h5>
                         </div>
                       </div>
                     </div>
