--- a/hospital.html
+++ b/hospital.html
@@ -135,7 +135,7 @@
                                             <a href="https://organization-web.github.io/Clinic-1/" target="_blank">
                                                 <img src="images/services/clinic-1.jpg" class="img-fluid" alt="">
                                             </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                                            <h5 class="card-title mt-5 text-center">Hospital-1</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -149,7 +149,7 @@
                                             <a href="https://organization-web.github.io/Clinic-2/" target="_blank">
                                                 <img src="images/services/clinic-2.jpg" class="img-fluid" alt="">
                                             </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                                            <h5 class="card-title mt-5 text-center">Hospital-2</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -163,7 +163,7 @@
                                             <a href="https://organization-web.github.io/Clinic-3/" target="_blank">
                                                 <img src="images/services/clinic-3.jpg" class="img-fluid" alt="">
                                             </a>
-                                            <h5 class="card-title mt-5 text-center">Hospital</h5>
+                                            <h5 class="card-title mt-5 text-center">Hospital-3</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                             <a href="https://organization-web.github.io/Dental-1/" target="_blank">
                                                 <img src="images/services/dental-1.jpg" class="img-fluid" alt="">
                                             </a>
-                                            <h5 class="card-title mt-5 text-center">Dental</h5>
+                                            <h5 class="card-title mt-5 text-center">Dental-1</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
                                             <a href="https://organization-web.github.io/Dental-2/" target="_blank">
                                                 <img src="images/services/dental-2.jpg" class="img-fluid" alt="">
                                             </a>
-                                            <h5 class="card-title mt-5 text-center">Dental</h5>
+                                            <h5 class="card-title mt-5 text-center">Dental-2</h5>
                                         </div>
                                     </div>
                                 </div>
