--- a/travel agency.html
+++ b/travel agency.html
@@ -135,7 +135,7 @@
                                                 <a href="https://organization-web.github.io/Travel-Agency-1/" target="_blank">
                                                     <img src="images/services/travel-1.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency-1</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -149,7 +149,7 @@
                                                 <a href="https://organization-web.github.io/Travel-Agency-2/" target="_blank">
                                                     <img src="images/services/travel-2.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency-2</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -163,7 +163,7 @@
                                                 <a href="https://organization-web.github.io/Travel-Agency-3/" target="_blank">
                                                     <img src="images/services/travel-3.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency-3</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -177,7 +177,7 @@
                                                 <a href="https://organization-web.github.io/Organization-1/" target="_blank">
                                                     <img src="images/services/org-1.jpg" class="img-fluid" alt="">
                                                 </a>
-                                                <h5 class="card-title mt-5 text-center">Travel Agency</h5>
+                                                <h5 class="card-title mt-5 text-center">Travel Agency-4</h5>
                                             </div>
                                         </div>
                                     </div>
