--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="row">
                         <div class="col-md-12">
 
-                            <div class="hb-content">
+                            <div class="hb-content row">
                                 <a class="logo logo-header" href="#">
                                     <img alt="" src="images/files/logo-header-alt.png">
                                     <h3><span class="colored">FrogBid</span></h3>
@@ -94,9 +94,7 @@
                                     We Provide the Solutions for Your Business
                                 </h1>
                                 <div class="description">
-                                    Incepted in 2018, FrogBid is a main Software Development organization and IT
-                                    specialist co-op in Online, giving seriously evaluated Software Solutions and
-                                    Services. It is the biggest Retail Software and Solutions supplier in Online.
+                                    Incepted in 2018, FrogBid is a main Software Development organization and IT specialist co-op in Online, giving seriously evaluated Software Solutions and Services.We increase the revenue of e-commerce businesses by 3x. Show your customers how awesome you are through your website. It is the biggest Retail Software and Solutions supplier in Online.
                                 </div>
                                 <a class="btn x-large colorful hover-colorful-darken mt-60"
                                    href="https://demo.frogbid.xyz/" target="_blank">View
@@ -150,11 +148,8 @@
                                 <div class="section-title text-center">
                                     <span>Welcome to FrogBid</span>
                                     <h2>Create a Beautiful Landing Page In a Minute Not Weeks</h2>
-                                    <p>
-                                        Our product is outfitted with solid announcing effectiveness to help
-                                        administrators seeing information progressively. Reports is the primary strength
-                                        of our items. Your information has no worth except if you get the view you need,
-                                        we have various kinds of reports in our product.
+                                    <p style="text-align: justify;">
+                                        76 out of every 100 of your visitors end up abandoning their cart.Our product is outfitted with solid announcing effectiveness to help administrators seeing information progressively.We make designs that make users happy. It's our responsibility to build a seamless experience for your users.Reports is the primary strength of our items. Your information has no worth except if you get the view you need, we have various kinds of reports in our product.Research shows, that 38% of online shoppers will leave a website if they find the design to be unattractive. Is your website attractive enough?
                                     </p>
                                 </div><!-- .section-title end -->
 
@@ -263,24 +258,24 @@
                                             <div class="col-sm-4">
                                                 <div class="box-info box-info-2 text-center mb-md-40">
                                                     <div class="box-content">
-                                                        <h5>Unlimited Features</h5>
-                                                        <p>Creative thinking never ends.</p>
+                                                        <h5>Responsibility </h5>
+                                                        <p>We take full responsibility for our work and the results we produce.</p>
                                                     </div><!-- .box-content end -->
                                                 </div><!-- .box-info end -->
                                             </div><!-- .col-sm-4 end -->
                                             <div class="col-sm-4">
                                                 <div class="box-info box-info-2 text-center mb-md-40">
                                                     <div class="box-content">
-                                                        <h5>Creative Design</h5>
-                                                        <p>Creative design make beautiful</p>
+                                                        <h5>Communication</h5>
+                                                        <p> We make sure that you are on the same page as us.</p>
                                                     </div><!-- .box-content end -->
                                                 </div><!-- .box-info end -->
                                             </div><!-- .col-sm-4 end -->
                                             <div class="col-sm-4">
                                                 <div class="box-info box-info-2 text-center">
                                                     <div class="box-content">
-                                                        <h5>Ultra Responsive</h5>
-                                                        <p>Responsive design make beautiful</p>
+                                                        <h5>Creativity</h5>
+                                                        <p> A creative mind is responsible for generating unique ideas.</p>
                                                     </div><!-- .box-content end -->
                                                 </div><!-- .box-info end -->
                                             </div><!-- .col-sm-4 end -->
@@ -310,20 +305,24 @@
                                     <span>Join Now</span>
                                     <h2>Start Your Project with Special Offer 50% Discount</h2>
                                     <p>
-                                        With our creative apparatuses and arrangements customized to enable your
+                                        Most businesses fail to satisfy users because they don't work with us which results in decreased sales. Do you want to increase your revenue by 3x? With our creative apparatuses and arrangements customized to enable your
                                         business, you simply need to pause for a minute and see your issues addressed,
                                         business activities sped up and group profitability supported.
                                     </p>
                                 </div><!-- .section-title end -->
                                 <ul class="list dot">
                                     <li>Responsive Design</li>
-                                    <li>Looking Great on any Device</li>
                                     <li>Great Support</li>
+                                    <li>Unlimited Features</li>
+                                    <li>Weekly updates on your project</li>
+                                    <li>Looking Great on any Device</li>
                                     <li>Highest Speed</li>
                                     <li>Modern Features</li>
                                     <li>Useful and Intuitive Interface</li>
                                     <li>Fresh Design</li>
-                                    <li>Unlimited Features</li>
+                                    <li>Satisfy your customers</li>
+                                    <li>Quick communication</li>
+                                    <li>3x your revenue through website</li>
                                 </ul><!-- .list.dot end -->
 
                             </div><!-- .col-md-6 end -->
@@ -930,6 +929,7 @@
 <script src="js/jquery.validate.min.js"></script>
 <script src="js/simple-scrollbar.min.js"></script>
 <script src='js/functions.js'></script>
+
 
 </body>
 </html>
