--- a/index.html
+++ b/index.html
@@ -971,21 +971,32 @@
                                         <div class="box-content">
                                             <h5>Get in touch</h5>
                                             <ul style="list-style: none">
-                                                <li style="float: left;margin-right: 20px;font-size: 20px"><i
-                                                        class="fa-brands fa-facebook text-white"></i></li>
-                                                <li style="float: left;margin-right: 20px;font-size: 20px"><i
-                                                        class="fa-brands fa-instagram text-white"></i></li>
-                                                <li style="margin-right: 20px;font-size: 20px"><i
-                                                        class="fa-brands fa-twitter text-white"></i></li>
+                                                <li style="float: left;margin-right: 20px;font-size: 20px"><a href="https://www.behance.net/frogbid" target="_blank">
+                                                    <i class="fa-brands fa-behance text-white"></i>
+                                                </a></li>
+                                                <li style="float: left;margin-right: 20px;font-size: 20px">
+                                                    <a href="https://www.instagram.com/frog_bid/">
+                                                        <i class="fa-brands fa-instagram text-white"></i>
+                                                    </a>
+                                                </li>
+                                                <li style="margin-right: 20px;font-size: 20px">
+                                                    <a href="https://twitter.com/frog_bid">
+                                                        <i class="fa-brands fa-twitter text-white"></i>
+                                                    </a>
+                                                </li>
                                             </ul><!-- .social-icons end -->
 
                                             <ul style="list-style: none">
-                                                <li style="float: left;margin-right: 20px;font-size: 20px"><i
-                                                        class="fa-brands fa-whatsapp text-white"></i></li>
-                                                <li style="float: left;margin-right: 20px;font-size: 20px"><i
-                                                        class="fa-solid fa-envelope text-white"></i></li>
-                                                <li style="float: left;margin-right: 20px;font-size: 18px"><i
-                                                        class="fa-solid fa-phone text-white"></i></li>
+                                                <li style="float: left;margin-right: 20px;font-size: 20px">
+                                                    <a href="https://wa.me/01676617867">
+                                                        <i class="fa-brands fa-whatsapp text-white"></i>
+                                                    </a>
+                                                </li>
+                                                <li style="float: left;margin-right: 20px;font-size: 20px">
+                                                    <a href="mailto:tech@frogbid.com">
+                                                        <i class="fa-solid fa-envelope text-white"></i>
+                                                    </a>
+                                                </li>
                                             </ul><!-- .social-icons end -->
                                         </div><!-- .box-content end -->
                                     </div><!-- .box-info end -->
