--- a/index.html
+++ b/index.html
@@ -32,9 +32,25 @@
     <!-- Title
     ============================================= -->
     <title>Home | FrogBid</title>
+    <style>
+        #overlay {
+            position: fixed;
+            display: none;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0,0,0,0.75);
+            z-index: 30;
+        }
+    </style>
 </head>
 
 <body class="layout-2">
+
+<div id="overlay"></div>
 
 <div id="scroll-progress">
     <div class="scroll-progress"><span class="scroll-percent"></span></div>
@@ -57,9 +73,12 @@
                         Get your FREE copy now!
                     </p>
                     <div class="sub-main">
-                        <a href="document/e-book.pdf" target="_blank">
+                        <form>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Enter Your Email" aria-describedby="basic-addon1">
+                            </div>
                             <button class="button-three">Get your FREE copy now !</button>
-                        </a>
+                        </form>
                     </div>
                 </div>
 
@@ -1055,13 +1074,16 @@
 
     setTimeout(() => {
         modalMenu.classList.add('show');
+        document.getElementById("overlay").style.display = "block";
     }, 30000);
 
     closeBtn.addEventListener('click', () => {
         modalMenu.classList.remove('show')
+        document.getElementById("overlay").style.display = "none";
     });
     modalBtn.addEventListener('click', () => {
         modalMenu.classList.remove('show')
+        document.getElementById("overlay").style.display = "none";
     });
 </script>
 <script src="js/jquery.js"></script>
